[package]
name = "buildfs"
version = "0.3.2"
edition = "2021"
description = "A CI-compatible CLI utility that can create root filesystem images (for use in virtual machines) from reproducible and readable TOML build scripts"
license = "MIT"
keywords = ["firecracker", "cli", "rootfs", "docker", "podman"]
categories = ["virtualization", "filesystem", "command-line-utilities"]
repository = "https://github.com/kanpov/buildfs"
readme = "README.md"
rust-version = "1.80.0"

[profile.dev]
panic = "abort"
debug = false
strip = "symbols"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1

[dependencies]
async-trait = "0.1.83"
bollard = { version = "0.18.1" }
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
flate2 = "1.0.34"
fs_extra = "1.3.0"
futures-util = "0.3.31"
hyper = "1.5.0"
hyper-util = { version = "0.1.10", features = ["tokio"] }
libc = "0.2.161"
log = "0.4.22"
podman-rest-client = { version = "0.13.0", default-features = false, features = [
    "v5",
    "uds",
] }
serde = { version = "1.0.214", features = ["derive"] }
simple_logger = "5.0.0"
sys-mount = "3.0.1"
tar = "0.4.42"
tokio = { version = "1.41.0", features = [
    "rt-multi-thread",
    "process",
    "macros",
    "fs",
] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
which = "7.0.0"
